Fix teashelf scrolling on mobile

--- a/src/components/MiddlePanels.css
+++ b/src/components/MiddlePanels.css
@@ -157,6 +157,7 @@
     top: 0px;
     left: 0px;
     min-height: 100vh;
+    height: 100vh;
     min-width: 100vw;
     z-index: 101;
     box-sizing: border-box;
